alignment fixes in list view (checkbox, file name)

--- a/client/www/css/media.css
+++ b/client/www/css/media.css
@@ -288,20 +288,20 @@ div.medium.compact > div.tagger {
 
 div.medium.compact > div.check,
 div.media.list > div.medium.expanded > div.check {
-	width: 16px;
-	padding-left: 4px;
+	padding: 1px 5px;
+	border-left: 1px solid transparent;
+	border-right: 1px solid transparent;
 }
 
 div.media.list > div.medium.expanded > div.check {
-	top: 3px;
+	top: 2px;
 	left: 0;
 }
 
 div.medium.compact > div.check > input,
 div.media.list > div.medium.expanded > div.check > input {
-	height: 16px;
-	margin: 0;
-	vertical-align: middle;
+	height: 14px;
+	margin: 1px 0;
 }
 
 div.medium.compact > div.file {
@@ -309,8 +309,9 @@ div.medium.compact > div.file {
 }
 
 div.media.list > div.medium.expanded > div.file {
-	top: 3px;
+	top: 2px;
 	left: 25px;
+	padding: 1px 5px 1px 0;
 }
 
 div.medium.compact > div.file > span,
